[package]
name = "rust_9cc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
assert_cmd = "2.0.7"
strum_macros = "0.24.1"
thiserror = "1.0.38"

[[bin]]
name = "main"
path = "src/main.rs"
